Simplified JVM GC options